--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -21,27 +21,28 @@ Target DLL:      UL2CM3.DLL V1.164.8.0
 Dialog DLL:      TARMP1.DLL V1.27.1.0
  
 <h2>Project:</h2>
-C:\Users\alefe\Documents\Polito\4_anno\Semestre_1\Architetture\Slides\ARM\Progetti\12_sample_GLCD_TP\sample.uvprojx
-Project File Date:  12/29/2023
+C:\Users\alefe\Documents\Polito\4_anno\Semestre_1\Architetture\Labs\extrapoints1\ASE_progetto\sample.uvprojx
+Project File Date:  01/05/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCLANG5\Bin'
-Build target 'Target 1'
+Rebuild target 'Target 1'
 assembling startup_LPC17xx.s...
 compiling AsciiLib.c...
+compiling sample.c...
 compiling lib_timer.c...
 compiling core_cm3.c...
-compiling sample.c...
 compiling IRQ_timer.c...
 timer\IRQ_timer.c(41): warning:  #223-D: function "sprintf" declared implicitly
   					sprintf(time_in_char,"%4d",clear/20);
 timer\IRQ_timer.c: 1 warning, 0 errors
+compiling init.c...
 compiling system_LPC17xx.c...
 compiling TouchPanel.c...
 compiling HzLib.c...
 compiling GLCD.c...
 linking...
-Program Size: Code=23964 RO-data=1772 RW-data=36 ZI-data=684  
+Program Size: Code=24344 RO-data=1772 RW-data=36 ZI-data=684  
 ".\sample.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -65,7 +66,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
