--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -29,20 +29,22 @@ Project File Date:  01/05/2024
 Rebuild target 'Target 1'
 assembling startup_LPC17xx.s...
 compiling AsciiLib.c...
-compiling sample.c...
-compiling lib_timer.c...
 compiling core_cm3.c...
+compiling sample.c...
+compiling init.c...
 compiling IRQ_timer.c...
 timer\IRQ_timer.c(41): warning:  #223-D: function "sprintf" declared implicitly
   					sprintf(time_in_char,"%4d",clear/20);
 timer\IRQ_timer.c: 1 warning, 0 errors
-compiling init.c...
+compiling lib_button.c...
 compiling system_LPC17xx.c...
+compiling lib_timer.c...
+compiling IRQ_button.c...
 compiling TouchPanel.c...
 compiling HzLib.c...
 compiling GLCD.c...
 linking...
-Program Size: Code=24344 RO-data=1772 RW-data=36 ZI-data=684  
+Program Size: Code=24548 RO-data=1772 RW-data=36 ZI-data=684  
 ".\sample.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -66,7 +68,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
