--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -27,25 +27,23 @@ Project File Date:  01/05/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCLANG5\Bin'
 Rebuild target 'Target 1'
-assembling startup_LPC17xx.s...
-compiling AsciiLib.c...
-compiling system_LPC17xx.c...
-compiling sample.c...
-compiling lib_button.c...
-compiling core_cm3.c...
-compiling IRQ_button.c...
-compiling lib_timer.c...
-compiling init.c...
-compiling IRQ_timer.c...
-timer\IRQ_timer.c(41): warning:  #223-D: function "sprintf" declared implicitly
-  					sprintf(time_in_char,"%4d",clear/20);
-timer\IRQ_timer.c: 1 warning, 0 errors
 compiling TouchPanel.c...
+compiling sample.c...
+compiling AsciiLib.c...
+assembling startup_LPC17xx.s...
+compiling IRQ_timer.c...
+compiling core_cm3.c...
+compiling lib_timer.c...
+compiling lib_button.c...
+compiling game_logic.c...
+compiling init.c...
+compiling IRQ_button.c...
+compiling system_LPC17xx.c...
 compiling HzLib.c...
 compiling GLCD.c...
 linking...
-Program Size: Code=24548 RO-data=1772 RW-data=36 ZI-data=684  
-".\sample.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=18738 RO-data=1774 RW-data=8 ZI-data=608  
+".\sample.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
