added barrier painting and some variable renaming for consistency

--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -27,28 +27,28 @@ Project File Date:  01/05/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCLANG5\Bin'
 Rebuild target 'Target 1'
-assembling startup_LPC17xx.s...
-compiling AsciiLib.c...
 compiling IRQ_button.c...
+assembling startup_LPC17xx.s...
+compiling TouchPanel.c...
+compiling AsciiLib.c...
+compiling IRQ_timer.c...
+compiling core_cm3.c...
 compiling sample.c...
+compiling lib_button.c...
+compiling lib_timer.c...
 compiling coloring.c...
 compiling system_LPC17xx.c...
-compiling core_cm3.c...
-compiling IRQ_timer.c...
-compiling lib_timer.c...
-compiling game_logic.c...
-game_logic.c(107): warning:  #177-D: variable "player_turn"  was declared but never referenced
-  	uint8_t player_turn = 1;
-game_logic.c(110): warning:  #177-D: variable "player2"  was declared but never referenced
-  	Pos player2 = {6,3};
-game_logic.c: 2 warnings, 0 errors
 compiling init.c...
-compiling lib_button.c...
-compiling TouchPanel.c...
+compiling game_logic.c...
+game_logic.c(110): warning:  #177-D: variable "player_turn"  was declared but never referenced
+  	uint8_t player_turn = 1;
+game_logic.c(113): warning:  #177-D: variable "player2"  was declared but never referenced
+  	Pos_square player2 = {6,3};
+game_logic.c: 2 warnings, 0 errors
 compiling HzLib.c...
 compiling GLCD.c...
 linking...
-Program Size: Code=20376 RO-data=1792 RW-data=8 ZI-data=608  
+Program Size: Code=20648 RO-data=1792 RW-data=8 ZI-data=608  
 ".\sample.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
