--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -27,32 +27,30 @@ Project File Date:  01/09/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCLANG5\Bin'
 Rebuild target 'Target 1'
+compiling sample.c...
 assembling startup_LPC17xx.s...
-compiling AsciiLib.c...
-compiling lib_timer.c...
 compiling init.c...
+compiling AsciiLib.c...
+compiling coloring.c...
+compiling core_cm3.c...
+compiling IRQ_timer.c...
+compiling lib_timer.c...
 compiling IRQ_button.c...
 compiling system_LPC17xx.c...
-compiling lib_button.c...
-compiling core_cm3.c...
-compiling sample.c...
-compiling IRQ_timer.c...
-compiling coloring.c...
 compiling game_logic.c...
-game_logic.c(142): warning:  #177-D: variable "player_turn"  was declared but never referenced
-  	uint8_t player_turn = 1;
-game_logic.c(145): warning:  #177-D: variable "player2"  was declared but never referenced
+game_logic.c(144): warning:  #177-D: variable "player2"  was declared but never referenced
   	Pos_square player2 = {6,3};
-game_logic.c: 2 warnings, 0 errors
+game_logic.c: 1 warning, 0 errors
+compiling lib_button.c...
 compiling TouchPanel.c...
 compiling lib_joystick.c...
-compiling HzLib.c...
 compiling IRQ_RIT.c...
 compiling lib_RIT.c...
+compiling HzLib.c...
 compiling GLCD.c...
 linking...
-Program Size: Code=21564 RO-data=1792 RW-data=40 ZI-data=608  
-".\sample.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=21604 RO-data=1792 RW-data=40 ZI-data=608  
+".\sample.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
