--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -22,36 +22,37 @@ Dialog DLL:      TARMP1.DLL V1.27.1.0
  
 <h2>Project:</h2>
 C:\Users\alefe\Documents\Polito\4_anno\Semestre_1\Architetture\Labs\extrapoints1\ASE_progetto\sample.uvprojx
-Project File Date:  01/09/2024
+Project File Date:  01/14/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCLANG5\Bin'
 Rebuild target 'Target 1'
+compiling path_finding.c...
 assembling startup_LPC17xx.s...
-compiling core_cm3.c...
 compiling AsciiLib.c...
-compiling lib_timer.c...
-compiling lib_button.c...
-compiling IRQ_timer.c...
-compiling system_LPC17xx.c...
-compiling init.c...
-compiling lib_joystick.c...
 compiling coloring.c...
-compiling TouchPanel.c...
-compiling sample.c...
-compiling IRQ_button.c...
-compiling lib_RIT.c...
+compiling core_cm3.c...
+compiling system_LPC17xx.c...
 compiling game_logic.c...
-game_logic.c(578): warning:  #111-D: statement is unreachable
+game_logic.c(642): warning:  #111-D: statement is unreachable
   			break;
-game_logic.c(585): warning:  #940-D: missing return statement at end of non-void function "show_wall_movement" 
+game_logic.c(649): warning:  #940-D: missing return statement at end of non-void function "show_wall_movement" 
   }
 game_logic.c: 2 warnings, 0 errors
-compiling IRQ_RIT.c...
+compiling init.c...
+compiling sample.c...
+compiling IRQ_button.c...
+compiling IRQ_timer.c...
+compiling lib_timer.c...
+compiling lib_button.c...
+compiling TouchPanel.c...
 compiling HzLib.c...
+compiling lib_joystick.c...
+compiling IRQ_RIT.c...
+compiling lib_RIT.c...
 compiling GLCD.c...
 linking...
-Program Size: Code=25228 RO-data=1780 RW-data=52 ZI-data=780  
+Program Size: Code=26016 RO-data=1780 RW-data=52 ZI-data=6772  
 ".\sample.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -75,7 +76,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
